<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="bd_sms_device_admin_disable_message">If you revoke the device administrator privileges from Bitdefender Anti-Theft, you will be unable to remotely lock the device in case it gets stolen and will only be able to partially wipe data</string>
    <string name="bd_sms_device_admin_enable_message">Allow Bitdefender Mobile Security to lock or erase your device if it gets lost. Required for Web Control and SMS Control</string>
    <string name="bd_sms_password_hint">enter PIN</string>
    <string name="bd_sms_forgot_password">Forgot your PIN? Log in to https://my.bitdefender.com to recover it.</string>
    <string name="bd_applock_prevent_access">"This app is locked.
Type your PIN to continue:"</string>
    <string name="app_name">Bitdefender Mobile Security</string>
    <string name="bd_sms_list_response">The available commands are %s</string>
    <string name="bd_sms_locate_response">My location at %1$s was %2$s</string>
    <string name="bd_sms_locate_null_response">No location providers are currently available on this device</string>
    <string name="bd_sms_lock_ok">The phone was successfully locked. Track it on a map at: https://my.bitdefender.com</string>
    <string name="bd_sms_lock_failed">There was an error when locking the device</string>
    <string name="bd_sms_full_wipe_started">A full device wipe has started. This way nobody will gain access to your private data</string>
    <string name="bd_sms_partial_wipe_started">A partial wipe of the device has started</string>
    <string name="bd_sms_screaming_started">"The phone is screaming as loud as possible. If you can't hear it, login to https://my.bitdefender.com, to locate it on a map"</string>
    <string name="bd_sms_could_not_start_screaming">Could not start screaming</string>
    <string name="bd_sms_device_admin_label">Bitdefender Anti-Theft</string>
    <string name="bd_sms_device_admin_description">Allow Bitdefender Mobile Security to lock or erase your device if it gets lost. Required for Web Control and SMS Control</string>
    <string name="bd_sms_lock_failed_no_device_admin">The device could not be locked because the application does not have device admin privileges</string>
    <string name="bd_sms_lock_failed_password_not_reset">The passcode could not be reset but a lock was attempted</string>
    <string name="bd_antitheft_sdk_show_message_button">OK</string>
    <string name="bd_sms_sim_changed">"Somebody changed your friend's SIM! This is the number of the person currently using the device. Contact your friend to make sure he didn't lose his phone"</string>
    <string name="bd_sms_missing_command">The command name is missing. The correct syntax is BD-&lt;PIN> &lt;command>. The available commands are: %s</string>
    <string name="bd_sms_invalid_command">The command you have entered is unknown. The available commands are: %s</string>
    <string name="bd_sms_answer_call_impossible">The operating system on this device does not allow third party applications to handle incoming calls</string>
    <string name="bd_sms_answer_call">You can call your phone now! Your call will be automatically answered</string>
    <string name="RegistrationActivity_extend_dialog_content">You can keep your features by buying the full product through Google Checkout or by entering an already purchased key.</string>
    <string name="about_activity_content_1">Bitdefender Mobile Security &amp; Antivirus is a next-gen security solution for Android devices focused on little (to zero) system or battery impact while providing access to a number of security functions in order to help you have a safer and more informed Android experience.</string>
    <string name="about_activity_content_2">Copyright 2015 Bitdefender. All rights reserved.</string>
    <string name="about_activity_content_3">Should you have any questions regarding how the product works, please &lt;a href=http://www.bitdefender.com/support/contact-us.html >contact us&lt;/a>.</string>
    <string name="about_activity_content_4">License Agreement</string>
    <string name="about_activity_title">Version %s</string>
    <string name="applock_alert_new_app_cancel">Cancel</string>
    <string name="applock_alert_new_app_never_show">Never show this again</string>
    <string name="applock_alert_sure_disable">Are you sure you want to disable all advisory notifications? You can always change this option in the App Lock Settings.</string>
    <string name="applock_button_lock">Lock</string>
    <string name="applock_button_no">No</string>
    <string name="applock_button_yes">Yes</string>
    <string name="bd_applock_new_app_description">Protect your privacy by locking %s with your PIN code. Next time someone tries to open it, Bitdefender will ask for your PIN Code before allowing access.</string>
    <string name="buddy_clear_button">Clear number</string>
    <string name="buddy_description_text">"Choose a friend to be notified if your SIM card is replaced. This is the only number that can send the WIPE command by SMS.

Make sure you enter the full international number (including the country code)."</string>
    <string name="buddy_phone_number_hint">type a phone number</string>
    <string name="buddy_pick_contact">Or pick from contacts</string>
    <string name="buddy_submit_button">Save number</string>
    <string name="finish_screen_get_full_version">Get Full Version</string>
    <string name="finish_screen_quote">"\"Don't be fooled by its feather-light appearance: Bitdefender is a solid security suite that will keep your Android device clean\""</string>
    <string name="finish_screen_quote_author">PCMAG - April 30, 2013</string>
    <string name="finish_screen_start_trial">Start Trial Version</string>
    <string name="finish_screen_subtitle_promo">"You're about to secure your Android with
TOTAL PROTECTION!"</string>
    <string name="finish_screen_title_promo">Congratulations!</string>
    <string name="password_confirm_hint">confirm PIN</string>
    <string name="password_hint">enter PIN (4-8 digits)</string>
    <string name="password_submit_button">Save PIN</string>
    <string name="preview_trusted_number_not_set_text">Choose a friend you trust to receive a message whenever the SIM card is replaced. This is the only person that can send the WIPE command.</string>
    <string name="preview_trusted_number_not_set_warning">You have not set a trusted number!</string>
    <string name="promo_11_pc_mag_ref">March 31, 2014</string>
    <string name="promo_11_quote">"Bitdefender takes a low impact approach to security and brings strong anti-theft features making it our Editor's Choice for Android security apps"</string>
    <string name="promo_11_title">"Get the Multi-Awarded
Bitdefender Mobile Security"</string>
    <string name="promo_renew_1_top">"Hey, there! Your Android is safe thanks to 
Bitdefender Mobile Security."</string>
    <string name="promo_renew_1_top_2">days to go</string>
    <string name="promo_renew_1_top_3">But you can always renew early.</string>
    <string name="red_band_offer_special">SPECIAL DEAL</string>
    <string name="red_band_offer_subscription_1year">BEST DEAL</string>
    <string name="registration_upgrade_dialog_trial_2years">Buy 1 + 1 Year Free. Only %s</string>
    <string name="set_pin_dialog_description">Use your PIN Code to control your phone with SMS commands and to protect sensitive apps with App Lock.</string>
    <string name="set_pin_dialog_title">Choose your PIN Code</string>
    <string name="settings_buddy_number_button">Set Trusted Number</string>
    <string name="upsell_subscription_1_month">Buy Monthly Subscription for only %s</string>
    <string name="upsell_subscription_1_year">Buy Yearly Subscription for only %s</string>
    <string name="wear_title">WearON</string>
    <string name="wear_activity_new_feature_description">With WearON, the new Bitdefender Mobile Security functionality for your smart watch, you will never forget your phone and quickly find it with one tap.</string>
    <string name="wear_activity_new_feature_subtitle">Main Features</string>
    <string name="wear_activity_new_feature_content1">With Phone Alert your smart watch will vibrate when you step too far away from your phone.</string>
    <string name="wear_activity_new_feature_content2">"With Scream you will launch an alarm on your phone, even if it's on silent mode, using your smart watch."</string>
    <string name="wear_activity_new_feature_btn">OK, Got it</string>
    <string name="finish_screen_have_license">I already have a license</string>
</resources>