<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/PopupOverlayContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/popup_header" android:background="@drawable/notif_grey_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@id/scrollView" android:layout_alignRight="@id/scrollView">
        <TextView android:textSize="@dimen/large_text" android:textColor="@color/primary_text_white" android:gravity="center" android:id="@id/popup_header_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/settings_buddy_number_button" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView" style="@style/PopupScrollContentContainer">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buddy_main_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/buddy_description_text" android:text="@string/buddy_description_text" style="@style/PopupContent" />
            <EditText android:id="@id/buddy_edit_number" android:hint="@string/buddy_phone_number_hint" android:ems="10" android:maxLength="50" android:inputType="phone" android:imeOptions="actionDone" style="@style/PhoneInput" />
            <Button android:id="@id/buddy_pick_contact" android:text="@string/buddy_pick_contact" style="@style/BlackWideButton" />
            <Button android:id="@id/buddy_save_number" android:text="@string/buddy_submit_button" style="@style/GreenWideButton" />
            <Button android:id="@id/buddy_clear_number" android:visibility="gone" android:text="@string/buddy_clear_button" style="@style/RedWideButton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>