<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout style="@style/PopupOverlayContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/popup_header" android:background="@drawable/notif_grey_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/popup_dialog_min_width">
        <TextView android:textSize="@dimen/large_text" android:textColor="@color/primary_text_white" android:id="@id/popup_header_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/set_pin_dialog_title" />
    </LinearLayout>
    <ScrollView style="@style/PopupScrollContentContainer">
        <LinearLayout android:orientation="vertical" android:id="@id/password_main_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/password_description_text" android:text="@string/set_pin_dialog_description" style="@style/PopupContent" />
            <EditText android:id="@id/password_field" android:hint="@string/password_hint" android:maxLength="8" android:inputType="numberPassword" android:imeOptions="actionNext" style="@style/WideInput" />
            <EditText android:id="@id/password_field_confirm" android:hint="@string/password_confirm_hint" android:maxLength="8" android:inputType="numberPassword" android:imeOptions="actionDone" style="@style/WideInput" />
            <Button android:id="@id/password_submit" android:text="@string/password_submit_button" style="@style/GreenWideButton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>