<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/header" layout="@layout/header" />
    <ImageView android:background="@drawable/background_pattern" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/header" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/general_left_margin">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:src="@drawable/logo" />
            <TextView android:id="@id/about_version" android:text="@string/about_activity_title" style="@style/AboutText" />
            <TextView android:text="@string/about_activity_content_1" style="@style/AboutText" />
            <TextView android:text="@string/about_activity_content_2" style="@style/AboutText" />
            <TextView android:textColorLink="@color/hyperlink_textview_color" android:id="@id/about_activity_contact_us" android:text="@string/about_activity_content_3" style="@style/AboutText" />
            <TextView android:textColor="@color/hyperlink_textview_color" android:id="@id/about_activity_eula_text" android:clickable="true" android:layout_marginTop="40.0dip" android:text="@string/about_activity_content_4" style="@style/AboutText" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>