<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/help_dialog" style="@style/PopupOverlayContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/popup_header" layout="@layout/popup_header" />
    <ScrollView android:id="@id/help_content_container" style="@style/PopupScrollContentContainer">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/help_content" android:text="@string/bd_applock_new_app_description" style="@style/PopupContent" />
            <RelativeLayout android:id="@id/lockscreen_notification_container" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/applock_alert_new_app_never_show" android:layout_toLeftOf="@id/lockscreen_notification_button" style="@style/RegistrationTextItem" />
                <com.bitdefender.security.ui.BDToggleButton android:id="@id/lockscreen_notification_button" android:checked="false" style="@style/ToggleOnOff" />
            </RelativeLayout>
            <Button android:id="@id/applock_btn_lock" android:text="@string/applock_button_lock" style="@style/GreenWideButton" />
            <Button android:id="@id/applock_btn_cancel" android:text="@string/applock_alert_new_app_cancel" style="@style/BlackWideButton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>