<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/help_dialog" style="@style/PopupOverlayContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/popup_header" layout="@layout/popup_header" />
    <ScrollView android:id="@id/help_content_container" style="@style/PopupScrollContentContainer">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/help_content" android:text="@string/applock_alert_sure_disable" style="@style/PopupContent" />
            <Button android:id="@id/applock_btn_yes" android:text="@string/applock_button_yes" style="@style/GreenWideButton" />
            <Button android:id="@id/applock_btn_no" android:text="@string/applock_button_no" style="@style/BlackWideButton" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>